--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -69,7 +69,9 @@
   "cordova": {
     "plugins": {
       "com.moust.cordova.videoplayer": {},
-      "cordova-plugin-camera": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
