--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@ionic-native/camera": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/google-plus": "^5.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/video-player": "^5.19.1",
@@ -28,6 +29,7 @@
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-googleplus": "^8.2.1",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
@@ -82,7 +84,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-googleplus": {}
     },
     "platforms": [
       "android"
