--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -22,11 +22,14 @@
     "@ionic-native/camera": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/google-plus": "^5.20.0",
+    "@ionic-native/paypal": "^5.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/video-player": "^5.19.1",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
+    "card.io.cordova.mobilesdk": "^2.1.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-googleplus": "^8.2.1",
@@ -87,7 +90,8 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-googleplus": {
         "PLAY_SERVICES_VERSION": "15.0.1"
-      }
+      },
+      "com.paypal.cordova.mobilesdk": {}
     },
     "platforms": [
       "android"
