--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -26,14 +26,17 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/video-player": "^5.19.1",
+    "@ionic-native/youtube-video-player": "^5.20.0",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "8.1.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-googleplus": "^8.2.1",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
+    "cordova-plugin-youtube-video-player": "^2.4.0",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -91,7 +94,8 @@
       "cordova-plugin-googleplus": {
         "PLAY_SERVICES_VERSION": "15.0.1"
       },
-      "com.paypal.cordova.mobilesdk": {}
+      "com.paypal.cordova.mobilesdk": {},
+      "cordova-plugin-youtube-video-player": {}
     },
     "platforms": [
       "android"
