--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -19,13 +19,13 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@ionic-native/camera": "^5.19.1",
-    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/camera": "^5.20.0",
+    "@ionic-native/core": "^5.20.0",
     "@ionic-native/google-plus": "^5.20.0",
     "@ionic-native/paypal": "^5.20.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic-native/video-player": "^5.19.1",
+    "@ionic-native/splash-screen": "^5.20.0",
+    "@ionic-native/status-bar": "^5.20.0",
+    "@ionic-native/video-player": "^5.20.0",
     "@ionic-native/youtube-video-player": "^5.20.0",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
@@ -69,8 +69,8 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
@@ -98,7 +98,8 @@
       "cordova-plugin-youtube-video-player": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
