--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -85,9 +85,7 @@
   "cordova": {
     "plugins": {
       "com.moust.cordova.videoplayer": {},
-      "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
+      "cordova-plugin-camera": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
