--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/google-plus": "^5.20.0",
     "@ionic-native/ionic-webview": "^5.21.3",
     "@ionic-native/paypal": "^5.21.3",
+    "@ionic-native/sms": "^5.21.5",
     "@ionic-native/splash-screen": "^5.21.3",
     "@ionic-native/status-bar": "^5.20.0",
     "@ionic-native/video-player": "^5.20.0",
@@ -35,7 +36,7 @@
     "@ionic/storage": "^2.2.0",
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
-    "cordova-android": "8.1.0",
+    "cordova-android": "^8.1.0",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
@@ -43,6 +44,7 @@
     "cordova-plugin-googleplus": "^8.2.1",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "cordova-plugin-youtube-video-player": "^2.4.0",
+    "cordova-sms-plugin": "^1.0.0",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -101,11 +103,12 @@
       "com.paypal.cordova.mobilesdk": {},
       "cordova-plugin-youtube-video-player": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-sms-plugin": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
