--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -102,7 +102,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "438863470815-ijsjiack8t9k246ucv8n7919bk8oj34e.apps.googleusercontent.com"
+        "REVERSED_CLIENT_ID": "438863470815-ijsjiack8t9k246ucv8n7919bk8oj34e.apps.googleusercontent.com",
+        "PLAY_SERVICES_VERSION": "15.0.1"
       },
       "com.paypal.cordova.mobilesdk": {},
       "cordova-plugin-youtube-video-player": {},
