--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -35,6 +35,7 @@
     "@ionic-native/youtube-video-player": "^5.21.6",
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
+    "@types/hammerjs": "^2.0.36",
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "^8.1.0",
@@ -53,6 +54,7 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "ion2-calendar": "^3.0.0-rc.0",
+    "ionic-long-press": "^2.0.3",
     "ionic2-calendar": "^0.5.8",
     "moment": "^2.24.0",
     "rxjs": "~6.5.1",
