--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -25,10 +25,12 @@
     "@ionic-native/file": "^5.22.0",
     "@ionic-native/file-path": "^5.22.0",
     "@ionic-native/google-plus": "^5.22.0",
+    "@ionic-native/instagram": "^5.22.0",
     "@ionic-native/ionic-webview": "^5.22.0",
     "@ionic-native/paypal": "^5.22.0",
     "@ionic-native/screen-orientation": "^5.22.0",
     "@ionic-native/sms": "^5.22.0",
+    "@ionic-native/social-sharing": "^5.22.0",
     "@ionic-native/splash-screen": "^5.22.0",
     "@ionic-native/status-bar": "^5.22.0",
     "@ionic-native/video-player": "^5.22.0",
@@ -39,6 +41,7 @@
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "^8.1.0",
+    "cordova-instagram-plugin": "^0.5.8",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-calendar": "^5.1.5",
     "cordova-plugin-camera": "^4.1.0",
@@ -47,9 +50,11 @@
     "cordova-plugin-googleplus": "^8.2.1",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
+    "cordova-plugin-x-socialsharing": "^5.6.4",
     "cordova-plugin-youtube-video-player": "^2.4.0",
     "cordova-sms-plugin": "^1.0.0",
     "cordova-sqlite-storage": "^4.0.0",
+    "cordova-universal-clipboard": "git+https://github.com/Visigo/CordovaClipboard.git",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
@@ -113,7 +118,11 @@
       "cordova-plugin-filepath": {},
       "cordova-plugin-calendar": {},
       "cordova-sms-plugin": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
+      },
+      "cordova-instagram-plugin": {}
     },
     "platforms": [
       "ios",
