--- a/beauty-app/ionic.config.json
+++ b/beauty-app/ionic.config.json
@@ -3,5 +3,10 @@
   "integrations": {
     "cordova": {}
   },
+  "proxies": [
+    {
+      "proxyUrl": "https://beauty-lab-merch.myshopify.com"
+    }
+  ],
   "type": "angular"
 }
