--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -22,6 +22,7 @@
     "@ionic-native/camera": "^5.22.0",
     "@ionic-native/core": "^5.22.0",
     "@ionic-native/device": "^5.22.0",
+    "@ionic-native/email-composer": "^5.22.0",
     "@ionic-native/file": "^5.22.0",
     "@ionic-native/file-path": "^5.22.0",
     "@ionic-native/google-plus": "^5.22.0",
@@ -46,6 +47,7 @@
     "cordova-ios": "^5.1.1",
     "cordova-plugin-calendar": "^5.1.5",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-filepath": "^1.5.8",
     "cordova-plugin-googleplus": "^8.2.1",
@@ -130,7 +132,10 @@
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
       "cordova-instagram-plugin": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "ios",
