--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/in-app-browser": "^5.22.0",
     "@ionic-native/instagram": "^5.22.0",
     "@ionic-native/ionic-webview": "^5.22.0",
+    "@ionic-native/network": "^5.22.0",
     "@ionic-native/paypal": "^5.22.0",
     "@ionic-native/screen-orientation": "^5.22.0",
     "@ionic-native/sms": "^5.22.0",
@@ -51,6 +52,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-filepath": "^1.5.8",
     "cordova-plugin-googleplus": "^8.2.1",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "cordova-plugin-x-socialsharing": "^5.6.4",
@@ -135,7 +137,8 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "ios",
