--- a/beauty-api/composer.json
+++ b/beauty-api/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "paypal/rest-api-sdk-php": "^1.14",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
