--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -52,6 +52,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-filepath": "^1.5.8",
     "cordova-plugin-googleplus": "^8.2.1",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
