--- a/beauty-app/package.json
+++ b/beauty-app/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/email-composer": "^5.22.0",
     "@ionic-native/file": "^5.22.0",
     "@ionic-native/file-path": "^5.22.0",
-    "@ionic-native/in-app-browser": "^5.22.0",
+    "@ionic-native/in-app-browser": "^5.23.0",
     "@ionic-native/instagram": "^5.22.0",
     "@ionic-native/ionic-webview": "^5.22.0",
     "@ionic-native/network": "^5.22.0",
@@ -113,7 +113,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "com.paypal.cordova.mobilesdk": {},
