--- a/beauty-app-ios/package.json
+++ b/beauty-app-ios/package.json
@@ -29,7 +29,7 @@
     "@ionic-native/instagram": "^5.22.0",
     "@ionic-native/ionic-webview": "^5.27.0",
     "@ionic-native/network": "^5.22.0",
-    "@ionic-native/paypal": "^5.22.0",
+    "@ionic-native/paypal": "^5.27.0",
     "@ionic-native/screen-orientation": "^5.22.0",
     "@ionic-native/sms": "^5.22.0",
     "@ionic-native/social-sharing": "^5.22.0",
@@ -50,6 +50,7 @@
     "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
@@ -86,7 +87,6 @@
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
@@ -112,7 +112,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "com.paypal.cordova.mobilesdk": {},
@@ -134,10 +133,12 @@
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
