--- a/beauty-app-ios/package.json
+++ b/beauty-app-ios/package.json
@@ -137,7 +137,8 @@
       "cordova-plugin-network-information": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
