--- a/beauty-app/angular.json
+++ b/beauty-app/angular.json
@@ -177,7 +177,7 @@
   },
   "cli": {
     "defaultCollection": "@ionic/angular-toolkit",
-    "analytics": "3eff6840-2184-40a5-bc91-9990c6c72571"
+    "analytics": false
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
