--- a/beauty-app-ios/package.json
+++ b/beauty-app-ios/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/core": "2.4.5",
     "@ionic-native/camera": "^5.22.0",
     "@ionic-native/core": "^5.22.0",
     "@ionic-native/device": "^5.22.0",
@@ -40,25 +41,6 @@
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "@types/hammerjs": "^2.0.36",
-    "card.io.cordova.mobilesdk": "^2.1.0",
-    "com.paypal.cordova.mobilesdk": "^3.5.0",
-    "cordova-android": "^8.1.0",
-    "cordova-instagram-plugin": "^0.5.8",
-    "cordova-ios": "^5.1.1",
-    "cordova-plugin-calendar": "^5.1.5",
-    "cordova-plugin-camera": "^4.1.0",
-    "cordova-plugin-email-composer": "^0.9.2",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-filepath": "^1.5.8",
-    "cordova-plugin-ionic-webview": "^5.0.0",
-    "cordova-plugin-network-information": "^2.0.2",
-    "cordova-plugin-screen-orientation": "^3.0.2",
-    "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
-    "cordova-plugin-x-socialsharing": "^5.6.4",
-    "cordova-plugin-youtube-video-player": "^2.4.0",
-    "cordova-sms-plugin": "^1.0.0",
-    "cordova-sqlite-storage": "^4.0.0",
-    "cordova-universal-clipboard": "git+https://github.com/Visigo/CordovaClipboard.git",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
@@ -80,17 +62,12 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@capacitor/cli": "2.4.5",
     "@ionic/angular-toolkit": "^2.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
-    "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-inappbrowser": "^4.1.0",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-splashscreen": "^5.0.3",
-    "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -103,44 +80,5 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {},
-      "com.paypal.cordova.mobilesdk": {},
-      "cordova-plugin-youtube-video-player": {},
-      "cordova-plugin-file": {},
-      "cordova-plugin-filepath": {},
-      "cordova-plugin-calendar": {
-        "CALENDAR_USAGE_DESCRIPTION": " ",
-        "CONTACTS_USAGE_DESCRIPTION": " "
-      },
-      "cordova-sms-plugin": {},
-      "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-x-socialsharing": {
-        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+",
-        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
-      },
-      "cordova-instagram-plugin": {},
-      "cordova-plugin-email-composer": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova-plugin-network-information": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-inappbrowser": {}
-    },
-    "platforms": [
-      "android",
-      "ios"
-    ]
-  }
+  "description": "An Ionic project"
 }
