--- a/beauty-app-ios/package.json
+++ b/beauty-app-ios/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@capacitor/core": "2.4.5",
+    "@capacitor/ios": "^2.4.5",
     "@ionic-native/camera": "^5.22.0",
     "@ionic-native/core": "^5.22.0",
     "@ionic-native/device": "^5.22.0",
