--- a/beauty-app-ios/package.json
+++ b/beauty-app-ios/package.json
@@ -42,6 +42,8 @@
     "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "@types/hammerjs": "^2.0.36",
+    "card.io.cordova.mobilesdk": "^2.1.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
@@ -81,5 +83,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "com.paypal.cordova.mobilesdk": {}
+    }
+  }
 }
